src/hotspot/cpu/aarch64/macroAssembler_aarch64.cpp
@@ -2659,6 +2659,8 @@ void MacroAssembler::pop_call_clobbered_registers_except(RegSet exclude) {
           as_FloatRegister(i+3), T1D, Address(post(sp, 4 * wordSize)));
   }
 
+  reinitialize_ptrue();
+
   pop(call_clobbered_registers() - exclude, sp);
 }
 
@@ -2695,6 +2697,11 @@ void MacroAssembler::pop_CPU_state(bool restore_vectors, bool use_sve,
       ld1(as_FloatRegister(i), as_FloatRegister(i+1), as_FloatRegister(i+2),
           as_FloatRegister(i+3), restore_vectors ? T2D : T1D, Address(post(sp, step)));
   }
+
+  if (restore_vectors) {
+    reinitialize_ptrue();
+  }
+
   pop(0x3fffffff, sp);         // integer registers except lr & sp
 }
 
@@ -5304,7 +5311,9 @@ void MacroAssembler::verify_sve_vector_length() {
 
 void MacroAssembler::verify_ptrue() {
   Label verify_ok;
-  assert(UseSVE > 0, "should only be used for SVE");
+  if (!UseSVE) {
+    return;
+  }
   sve_cntp(rscratch1, B, ptrue, ptrue); // get true elements count.
   sve_dec(rscratch1, B);
   cbz(rscratch1, verify_ok);
